# youtube-clean-transcript

./: .gitignore  README.md  pyproject.toml
src/youtube_transcript/: main.py
